--- a/src/app/courses/courses.component.html
+++ b/src/app/courses/courses.component.html
@@ -1,1 +1,94 @@
-<p>courses works!</p>
+<div id="grad2">
+        <header>
+                <meta charset="utf-8">
+                <meta name="viewport" content="width=device-width, initial-scale=1">
+                <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+                <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+                <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+              </header>    
+    <br>
+              <h1>Courses</h1>
+    <br>
+        <table style="width:100%">
+                <tr>
+                    <th>Course Name</th>
+                    <th>Semester</th> 
+                    <th>Final Grade</th>
+                    <th>Description</th>
+                </tr>
+                <tr>
+                    <!--EECS 168-->
+                    <td>Programming I</td>
+                    <td>Spring 2019</td> 
+                    <td>A</td>
+                    <td>An introductory course in object-oriented programming using the language C++
+                    </td>
+                </tr>
+                <tr>
+                    <!--EECS 141-->
+                    <td>Introduction to Digital Logic Design (Honors)</td>
+                    <td>Fall 2018</td> 
+                    <td>A</td>
+                    <td>An introductory honors course in digital logic circuits, Boolean, and programmable logic devices
+                    </td>
+                </tr>
+                <tr>
+                    <!--HNRS 190-->
+                    <td>First Year Honors Seminar: (A Just Machine)</td>
+                    <td>Fall 2018</td> 
+                    <td>A</td>
+                    <td>A seminar about the historical overview of Computational Science and Finite State Machines
+                    </td>
+                </tr>
+                <tr>
+                    <!--MATH 145-->
+                    <td>Calculus I (Honors)</td>
+                    <td>Fall 2018</td> 
+                    <td>A</td>
+                    <td>An honors mathematics course over limits, derivatives, optimization, antiderivatives, and the Fundamental Theorem of Calculus</td>
+                </tr>
+                <tr>
+                    <!--MATH 126-->
+                    <td>Calculus II</td>
+                    <td>Spring 2019</td> 
+                    <td>A</td>
+                    <td>A mathematics course over volume, arc length, sequences and series, polar coordinates, and vectors</td>
+                </tr>
+                <tr>
+                    <!--PHSX 210-->
+                    <td>General Physics I for Engineers</td>
+                    <td>Spring 2019</td> 
+                    <td>A</td>
+                    <td>An introductory course into kinematics, mechanics, and thermodynamics</td>
+                </tr>
+                <tr>
+                    <!--ECON 142-->
+                    <td>Principles of Microeconomics</td>
+                    <td>Fall 2018</td> 
+                    <td>A</td>
+                    <td>An analytical introduction over microeconomic concepts: theory of markets, public policy, international trade, economic efficiency, and equity</td>
+                </tr>
+                <tr>
+                    <!--ECON 144-->
+                    <td>Principles of Macroeconomics</td>
+                    <td>Summer 2019</td> 
+                    <td>A</td>
+                    <td>An analytical introduction to macroeconomics concepts: determination of aggregate income, employment, inflation, exchange rates, and the role of fiscal and monetary policy, unemployment, inflation, and economic growth</td>
+                </tr>
+              </table>
+<h1>Skills</h1>
+<h2>Technical Skills</h2>
+    <ul style="list-style-type:circle;">
+        <li>C++</li>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>VHDL</li>
+    </ul>
+<h2>Soft Skills</h2>
+    <ul style="list-style-type:circle;">
+        <li>Cooperative</li>
+        <li>Intellectually Curious</li>
+        <li>Adaptive</li>
+
+    </ul>
+</div>
