--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,8 @@
 <ul>
-    <li><a routerLink="/home">About Me</a></li>
-    <li><a routerLink="/resume">Professional Development</a></li>
-    <li><a routerLink="/courses">Campus Involvement</a></li>
+    <li><a routerLink="/home">Home</a></li>
+    <li><a routerLink="/resume">Resume</a></li>
+    <li><a routerLink="/courses">Courses & Skills</a></li>
     <li><a routerLink="/contact">Contact Me</a></li>
   </ul>
+  <div class="topgrey"></div>
 
