--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,12 +1,18 @@
+#grad3{
+  background-image: linear-gradient(to right, rgba(255,0,0,0), rgba(179, 205, 218));
+  margin: 0px;
+}
 h1{
-text-align: center;
-font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-color:rgb(121, 11, 11);
-border: 2px solid black;
-margin-right: 300px;
-margin-left: 300px;
-border-radius: 5px;
+  margin:0px; 
+  text-align: center;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  color:rgb(11, 31, 121);
+  margin-right: 300px;
+  margin-left: 300px;
+  border-radius: 5px;
 }
 h3{
-    font-weight: 100;
+    text-align: center;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-weight: 500px;
 }
