--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,2 +1,28 @@
+<div id="grad3">
+    <header>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+      </header>
+      <br>
 <h1>Joshua Haxton</h1>
-<h3>This is my objective</h3>
+<h3>Objective: As a computer science undergraduate, I hope to obtain an summer internship position in the Computer Science Field </h3>
+<div class="row">
+        <div class="col-lg-7">
+<div class=container>            
+<p>My name is Joshua Haxton. I am currently an undergraduate Computer Science student at the University of Kansas. I am looking for a summer internship for 2020. I am in the second year of my education and in addition to pursuing a major in Computer Science I am pursuing a minor in Economics.</p>
+</div>
+</div>
+<div class="col-lg-5">
+<img src="../assets/profilepic.jpg" alt="Profile Pic" style="position: relative; left: 240px;width:400px;height: 300px;">
+</div>
+<div class= container>
+<h2>Education</h2>
+<p> University of Kansas<br>
+    Bachelor of Science in Computer Science<br>
+    GPA: 4.0
+</p>
+</div>
+</div>
