--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -1,1 +1,18 @@
-<p>resume works!</p>
+<div class="verticalStrip"></div>
+<div class="content">
+<header>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+  </header>
+ <!-- <div class="verticalStrip">
+      <div class="content">-->
+    <body>
+        
+        <br>
+        <iframe src="https://docs.google.com/document/d/e/2PACX-1vRyUR3LKJf4kXw9Fo3nYJAmOJwaDePGYLizbqpRL_8zI-By_5009YSpOBcto6M66by6akRbhYxvEyNO/pub?embedded=true"></iframe>
+     
+    </body>  
+</div>
