--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -8,3 +8,19 @@
               </header>    
 <p>contact</p>
 </div>
+<!--<form [formGroup]="contactForm">
+        <div>
+          <label for="name">
+            Name 
+          </label>
+          <input id="name" type="text" formControlName="name">
+        </div>
+      
+        <div>
+          <label for="email">
+            Email
+          </label>
+          <input id="email" type="text" formControlName="email">
+        </div>
+      
+</form>-->
