--- a/src/app/courses/courses.component.html
+++ b/src/app/courses/courses.component.html
@@ -41,25 +41,32 @@
                     </td>
                 </tr>
                 <tr>
-                    <!--MATH 145-->
-                    <td>Calculus I (Honors)</td>
-                    <td>Fall 2018</td> 
-                    <td>A</td>
-                    <td>An honors mathematics course over limits, derivatives, optimization, antiderivatives, and the Fundamental Theorem of Calculus</td>
+                    <!--EECS 268-->
+                    <td>Programming II</td>
+                    <td>Fall 2019</td> 
+                    <td>B</td>
+                    <td>A course in data strucutres (lists, queues, stacks, and trees), recursion, and algortithmic efficiency and performance analysis </td>
                 </tr>
                 <tr>
-                    <!--MATH 126-->
-                    <td>Calculus II</td>
-                    <td>Spring 2019</td> 
+                    <!--EECS 210-->
+                    <td>Discrete Structures</td>
+                    <td>Spring 2020</td> 
                     <td>A</td>
-                    <td>A mathematics course over volume, arc length, sequences and series, polar coordinates, and vectors</td>
+                    <td>A course in mathematical foundations including logic, sets and functions, general proof techniques, mathematical induction, sequences and summations, number theory, basic and advanced counting techniques, solution of recurrence relations, equivalence relations, partial order relations, lattices, graphs and trees, algorithmic complexity, and algorithm design and analysis</td>
                 </tr>
                 <tr>
-                    <!--PHSX 210-->
-                    <td>General Physics I for Engineers</td>
-                    <td>Spring 2019</td> 
+                    <!--EECS 368-->
+                    <td>Programming Language Paradigms</td>
+                    <td>Spring 2020</td> 
                     <td>A</td>
-                    <td>An introductory course into kinematics, mechanics, and thermodynamics</td>
+                    <td>A course that focuses on the two programmig languages JavaScript and Haskell and their atrributes, uses, advantages, and disadvantages</td>
+                </tr>
+                <tr>
+                    <!--EECS 388-->
+                    <td>Embedded Systems</td>
+                    <td>Spring 2020</td> 
+                    <td>A</td>
+                    <td>A course of the organization of embedded systems, input and output systems, collecting data from sensors, and controlling external devices</td>
                 </tr>
                 <tr>
                     <!--ECON 142-->
@@ -75,6 +82,13 @@
                     <td>A</td>
                     <td>An analytical introduction to macroeconomics concepts: determination of aggregate income, employment, inflation, exchange rates, and the role of fiscal and monetary policy, unemployment, inflation, and economic growth</td>
                 </tr>
+                <tr>
+                    <!--ECON 520-->
+                    <td>Microeconomics</td>
+                    <td>Spring 2020</td> 
+                    <td>A</td>
+                    <td>A course that focuses on the theory of consumption, production, pricing, and resource allocation</td>
+                </tr>
               </table>
 <h1>Skills</h1>
 <h2>Technical Skills</h2>
@@ -82,7 +96,10 @@
         <li>C++</li>
         <li>HTML</li>
         <li>CSS</li>
-        <li>VHDL</li>
+        <li>JavaScript</li>
+        <li>Haskell</li>
+        <li>Angular Framework</li>
+        <li>Java</li>
     </ul>
 <h2>Soft Skills</h2>
     <ul style="list-style-type:circle;">
