--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div id="grad3">
+<div id="grad">
     <header>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,18 +11,20 @@
 <h3>Objective: As a computer science undergraduate, I hope to obtain an summer internship position in the Computer Science Field </h3>
 <div class="row">
         <div class="col-lg-7">
-<div class=container>            
-<p>My name is Joshua Haxton. I am currently an undergraduate Computer Science student at the University of Kansas. I am looking for a summer internship for 2020. I am in the second year of my education and in addition to pursuing a major in Computer Science I am pursuing a minor in Economics.</p>
+<div class="about-me">            
+<p>My name is Joshua Haxton. I am currently an undergraduate Computer Science student at the University of Kansas from Jefferson City, MO. I am looking for a summer internship for 2021.</p>
 </div>
 </div>
 <div class="col-lg-5">
-<img src="../assets/profilepic.jpg" alt="Profile Pic" style="position: relative; left: 240px;width:400px;height: 300px;">
+<img src="../assets/profilepic.jpg" alt="Profile Pic">
 </div>
-<div class= container>
+<div class= "education">
 <h2>Education</h2>
 <p> University of Kansas<br>
-    Bachelor of Science in Computer Science<br>
-    GPA: 4.0
+    Bachelor of Science in Computer Science<br> 
+    Minor in Economics<br>
+    GPA: 3.95<br>
+    Graduation: May 2022<br>
 </p>
 </div>
 </div>
