--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,32 +1,29 @@
-.topgrey{
-  background-color: grey;
-  margin: 0;
-  padding-top: 10px;
-  padding-bottom: 0;
-}
 ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color:rgb(28, 72, 138);
-    width: 100%;
+  padding:0px;
+  display: block;
+  overflow: hidden;
+  border-style: outset;
+  border-width: 25px;
+  border-color:rgb(28, 72, 138);
+  text-align: center;
+  background-color: rgb(28, 72, 138);
   }
   
   li {
+    color: rgb(28, 72, 138);
     float: left;
-    margin: 0px;
+    margin: 5px;
   }
   
   li a {
-    display: block;
     color:white;
     text-align: center;
     padding: 16px 20px;
-    text-decoration: none;
   }
   
   li a:hover {
     background-color:rgba(11, 31, 121, 0.151);
   }
+
+  
   
