--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,6 +1,5 @@
-#grad3{
+#grad{
   background-image: linear-gradient(to right, rgba(255,0,0,0), rgba(179, 205, 218));
-  margin: 0px;
 }
 h1{
   margin:0px; 
@@ -10,9 +9,29 @@ h1{
   margin-right: 300px;
   margin-left: 300px;
   border-radius: 5px;
+  font-size:
 }
 h3{
     text-align: center;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-weight: 500px;
+}
+img{
+  position: relative;
+  float: left; 
+  width:400px;
+  height: 300px; 
+  overflow: hidden; 
+  border-radius: 10%;
+}
+div.about-me
+{
+  float: right;
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  padding-left: 25px;
+}
+
+div.education
+{
+  text-align: center;
 }
