--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,26 +1,19 @@
 <div id="grad1">
-        <header>
-                <meta charset="utf-8">
-                <meta name="viewport" content="width=device-width, initial-scale=1">
-                <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-                <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-                <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-              </header>    
-<p>contact</p>
+  <header>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+  </header>    
+  <h3>Contact Me</h3>
+  <div>
+    <label class="label">Name: </label>
+    <input type="text" name="name" width="100%" required>
+  </div>
+  <div>
+    <label class="label">Email: </label>
+    <input type="text" name="Email" width="100%" required>
+  </div>
+  <button>Submit</button>
 </div>
-<!--<form [formGroup]="contactForm">
-        <div>
-          <label for="name">
-            Name 
-          </label>
-          <input id="name" type="text" formControlName="name">
-        </div>
-      
-        <div>
-          <label for="email">
-            Email
-          </label>
-          <input id="email" type="text" formControlName="email">
-        </div>
-      
-</form>-->
