--- a/src/app/courses/courses.component.html
+++ b/src/app/courses/courses.component.html
@@ -9,7 +9,7 @@
     <br>
               <h1>Courses</h1>
     <br>
-        <table style="width:100%">
+        <table>
                 <tr>
                     <th>Course Name</th>
                     <th>Semester</th> 
