--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,3 @@
-<p>Joshua Haxton | haxtonjr@gmail.com | (816) 806-2762</p>
+<body>
+    <div class= "info">Joshua Haxton | haxtonjr@gmail.com | (816) 806-2762</div>
+</body>
