--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,6 @@
 <ul>
     <li><a routerLink="/home">Home</a></li>
+    <li><a routerLink= "/professional">Professional</a></li>
     <li><a routerLink="/resume">Resume</a></li>
     <li><a routerLink="/courses">Courses & Skills</a></li>
     <li><a routerLink="/contact">Contact Me</a></li>
