--- a/src/app/resume/resume.component.css
+++ b/src/app/resume/resume.component.css
@@ -14,6 +14,6 @@
 iframe{
       margin-right: 250px;
       margin-left: 250px;
-      width: 900px;
+      width: 100%;
       height: 1075px;
   }
