--- a/src/app/courses/courses.component.html
+++ b/src/app/courses/courses.component.html
@@ -108,4 +108,37 @@
         <li>Adaptive</li>
 
     </ul>
+<h1>Achievements</h1>
+<br>
+    <table>
+        <tr>
+            <th>Year(s)</th>
+            <th>Award</th>
+        </tr>
+        <tr>
+            <td>2018</td>
+            <td>Eagle Scout</td>
+        </tr>
+        <tr>
+            <td>2018</td>
+            <td>Bronze Palm</td>
+        </tr>
+        <tr>
+            <td>2019</td>
+            <td>Garmin Excellence Scholar</td>
+        </tr>
+        <tr>
+            <td>2018, 2019</td>
+            <td>Paul & Virginia B Miller EECS Scholar</td>
+        </tr>
+        <tr>
+            <td>2018, 2019</td>
+            <td>Carl Pingry Engineering Scholar</td>
+        </tr>
+        <tr>
+            <td>2018, 2019</td>
+            <td>Dean's List</td>
+        </tr>
+    </table>
+    <br>
 </div>
