--- a/src/app/professional/professional.component.html
+++ b/src/app/professional/professional.component.html
@@ -1,1 +1,15 @@
-<p>professional works!</p>
+<div id="grad6">
+    <header>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    </header>
+    <br>
+    <h1>Professional Experience</h1>
+    <h2>Information Technology Intern</h2>
+    <h3>Sun Life</h3>
+    <h4>Summer 2020</h4>
+            
+</div>
