deleted resume and added activities

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,3 +1,4 @@
+<div class="verticalStrip"></div>
 <div id="grad1">
   <header>
     <meta charset="utf-8">
@@ -5,7 +6,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-  </header>    
+  </header>
+  <br>    
   <h3>Contact Me</h3>
   <div>
     <label class="label">Name: </label>
