--- a/src/app/courses/courses.component.html
+++ b/src/app/courses/courses.component.html
@@ -124,20 +124,28 @@
             <td>Bronze Palm</td>
         </tr>
         <tr>
-            <td>2019</td>
-            <td>Garmin Excellence Scholar</td>
+            <td>2018</td>
+            <td>Brett Anderson Memorial Scholar</td>
         </tr>
         <tr>
             <td>2018, 2019</td>
             <td>Paul & Virginia B Miller EECS Scholar</td>
         </tr>
         <tr>
-            <td>2018, 2019</td>
+            <td>2019</td>
             <td>Carl Pingry Engineering Scholar</td>
         </tr>
         <tr>
-            <td>2018, 2019</td>
-            <td>Dean's List</td>
+            <td>2019</td>
+            <td>Garmin Excellence Scholar</td>
+        </tr>
+        <tr>
+            <td>2018, 2019, 2020</td>
+            <td>KU Excellence</td>
+        </tr>
+        <tr>
+            <td>2019</td>
+            <td>Univerisity of Kansas' Honor Roll</td>
         </tr>
     </table>
     <br>
