Skills format change

--- a/src/app/courses/courses.component.html
+++ b/src/app/courses/courses.component.html
@@ -90,24 +90,40 @@
                     <td>A course that focuses on the theory of consumption, production, pricing, and resource allocation</td>
                 </tr>
               </table>
+<br>
 <h1>Skills</h1>
-<h2>Technical Skills</h2>
-    <ul style="list-style-type:circle;">
-        <li>C++</li>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>JavaScript</li>
-        <li>Haskell</li>
-        <li>Angular Framework</li>
-        <li>Java</li>
-    </ul>
-<h2>Soft Skills</h2>
-    <ul style="list-style-type:circle;">
-        <li>Cooperative</li>
-        <li>Intellectually Curious</li>
-        <li>Adaptive</li>
-
-    </ul>
+<br>
+<div class= "container">
+    <div class= "left">
+        <div class= "skill">
+            <h2>Technical Skills</h2>
+                <ul>
+                    <li>C++</li>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>JavaScript</li>
+                    <li>Haskell</li>
+                    <li>Angular Framework</li>
+                    <li>Java</li>
+                </ul>
+        </div>
+    </div>
+    <div class= "right">
+        <div class= "skill">
+            <h2>Soft Skills</h2>
+                <ul>
+                    <li>Cooperative</li>
+                    <li>Intellectually Curious</li>
+                    <li>Adaptability</li>
+                    <li>Ambitious</li>
+                    <li>Organized</li>
+                    <li>Dependability</li>
+                    <li>Critical Thinking</li>
+                </ul>
+        </div>
+    </div>
+</div>
+<br>
 <h1>Achievements</h1>
 <br>
     <table>
