--- a/src/app/courses/courses.component.css
+++ b/src/app/courses/courses.component.css
@@ -34,3 +34,25 @@ h1{
 h2{
   display:inline-block;
 }
+
+.skill {
+  border: 2px solid  rgb(179, 205, 218);
+  border-radius: 5%;
+  padding: 10px;
+  padding-right: 20px;
+  margin: 15px;
+}
+
+.right{
+  float: right;
+  margin-right: 30%;
+}
+
+.left{
+  float: left;
+  margin-left: 30% ;
+}
+
+.container{
+  width: 100%;
+}
