--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -15,22 +15,36 @@ h3{
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-weight: 500px;
 }
+
+.container::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+.pic{
+  float: left;
+  width: 35%;
+  padding: 20px;
+}
 img{
-  position: relative;
-  float: left; 
   width:400px;
   height: 300px; 
   overflow: hidden; 
+  border-radius: 5%;
+}
+.about-me
+{
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  float: left;
+  width: 65%;
+  padding: 20px;
+  line-height: 125%;
+  border: 2px solid rgb(11, 31, 121);
   border-radius: 10%;
 }
-div.about-me
-{
-  float: right;
-  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-  padding-left: 25px;
-}
 
-div.education
+.education
 {
   text-align: center;
 }
