--- a/src/app/courses/courses.component.html
+++ b/src/app/courses/courses.component.html
@@ -126,6 +126,7 @@
 <br>
 <h1>Achievements</h1>
 <br>
+<div class="achievements">
     <table>
         <tr>
             <th>Year(s)</th>
@@ -164,5 +165,6 @@
             <td>Univerisity of Kansas' Honor Roll</td>
         </tr>
     </table>
+</div>
     <br>
 </div>
