--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,22 +10,21 @@
     <h1>Joshua Haxton</h1>
     <h3>Objective: As a computer science undergraduate, I hope to obtain an summer internship position in the Computer Science Field </h3>
     <div class="container">
-        <div class="bio">
             <div class="about-me">            
-                <p>My name is Joshua Haxton. I am currently an undergraduate Computer Science student at the University of Kansas from Jefferson City, MO. I am looking for a summer internship for 2021. I need to put a longer statement so i can take up more space alongside the picture that way it looks nicer</p>
+                My name is Joshua Haxton. I am currently an undergraduate Computer Science student at the University of Kansas from Jefferson City, MO. I am looking for a summer internship for 2021. I need to put a longer statement so i can take up more space alongside the picture that way it looks nicer
             </div>
-            <div class="pic">
-                <img src="../assets/profilepic.jpg" alt="Profile Pic">
-            </div>
-        </div>
+                <img src="../assets/profilepic.jpg" class="pic"/>
     </div>
     <div class= "education">
         <h2>Education</h2>
-        <p> University of Kansas<br>
-            Bachelor of Science in Computer Science<br> 
-            Minor in Economics<br>
-            GPA: 3.95<br>
+        <p class= "school"> University of Kansas</p>
+        <p class="degree"> Bachelor of Science in Computer Science<br> 
+            Minor in Economics
+        </p>
+        <p> GPA: 3.95<br>
             Graduation: May 2022<br>
         </p>
     </div>
+        <img src="../assets/lawrencecampus.jpg" class="campus"/>
+        <br>
 </div>
