--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -26,15 +26,11 @@ h3{
     border-radius: 10px;
     width: 100%;
 }
-.container::after{
-  content: "";
-  clear: both;
-  display: table;
-}
 .pic{
   width: 35%;
   overflow: hidden; 
   border-radius: 5%;
+  vertical-align: middle;
   float: right;
   margin-right: 5%;
 }
@@ -46,7 +42,7 @@ h3{
   border: 2px solid rgb(11, 31, 121);
   border-radius: 10%;
   margin-right: 45%;
-  float: left;
+  width: 46%;
 }
 
 /*Education Description Section*/
