Basic activity descriptions

--- a/src/app/activites/activites.component.html
+++ b/src/app/activites/activites.component.html
@@ -8,9 +8,31 @@
     </header>
     <br>
     <h1>Jayhackers Information Security Club</h1>
+    <h4>Communications Chair</h4>
+    <h5>January 2020 - Present</h5>
+    <ul>
+      <li>Strategically promote the club using various platforms, such as social media and posters</li>
+      <li>Broadcast announcements to members as a member of the officer team</li>
+    </ul>
+    <h4>Web Master</h4>
+    <h5>May 2020 - Present</h5>
+    <ul>
+      <li>???</li>
+    </ul>
     <br>
     <h1>Vann Fellowship</h1>
+    <h5>Spring 2020</h5>
+    <p>A fellowship inspired by KU alumnus Kyle D. Vann. The Vann Fellowship is a one semester extracurricular program for engineering students that wish to 
+      explore the economics of innovation—specifically, the economic logic that drives Joseph Schumpeter’s famous idea of “Creative Destruction.” </p>
+      <ul>
+        <li>Third Place in Essay Competition</li>
+      </ul>
     <br>
     <h1>University of Kansas' Honors Program</h1>
+    <h5>Fall 2018 - Present</h5>
+    <ul>
+      <li>Presented Finite State Machines and their applications at the Honors Symposium</li>
+      <li>Partook in advanced honors courses at the School of Engineering and the department of Mathematics which allowed me to develop a deeper understanding of coursework</li>
+    </ul>
     <br>
 </div>   
