--- a/src/app/courses/courses.component.html
+++ b/src/app/courses/courses.component.html
@@ -7,22 +7,14 @@
                 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
               </header>    
     <br>
-              <h1>Courses</h1>
+              <h1>Relevant Courses</h1>
     <br>
         <table>
                 <tr>
                     <th>Course Name</th>
                     <th>Semester</th> 
-                    <th>Final Grade</th>
+                    <th>Grade</th>
                     <th>Description</th>
-                </tr>
-                <tr>
-                    <!--EECS 168-->
-                    <td>Programming I</td>
-                    <td>Spring 2019</td> 
-                    <td>A</td>
-                    <td>An introductory course in object-oriented programming using the language C++
-                    </td>
                 </tr>
                 <tr>
                     <!--EECS 141-->
@@ -38,6 +30,14 @@
                     <td>Fall 2018</td> 
                     <td>A</td>
                     <td>A seminar about the historical overview of Computational Science and Finite State Machines
+                    </td>
+                </tr>
+                <tr>
+                    <!--EECS 168-->
+                    <td>Programming I</td>
+                    <td>Spring 2019</td> 
+                    <td>A</td>
+                    <td>An introductory course in object-oriented programming using the language C++
                     </td>
                 </tr>
                 <tr>
