Added activities header

--- a/src/app/activites/activites.component.html
+++ b/src/app/activites/activites.component.html
@@ -7,7 +7,8 @@
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     </header>
     <br>
-    <h1>Jayhackers Information Security Club</h1>
+    <h1>Activities</h1>
+    <h2>Jayhackers Information Security Club</h2>
     <h4>Communications Chair</h4>
     <h5>January 2020 - Present</h5>
     <ul>
@@ -20,7 +21,7 @@
       <li>???</li>
     </ul>
     <br>
-    <h1>Vann Fellowship</h1>
+    <h2>Vann Fellowship</h2>
     <h5>Spring 2020</h5>
     <p>A fellowship inspired by KU alumnus Kyle D. Vann. The Vann Fellowship is a one semester extracurricular program for engineering students that wish to 
       explore the economics of innovation—specifically, the economic logic that drives Joseph Schumpeter’s famous idea of “Creative Destruction.” </p>
@@ -28,7 +29,7 @@
         <li>Third Place in Essay Competition</li>
       </ul>
     <br>
-    <h1>University of Kansas' Honors Program</h1>
+    <h2>University of Kansas' Honors Program</h2>
     <h5>Fall 2018 - Present</h5>
     <ul>
       <li>Presented Finite State Machines and their applications at the Honors Symposium</li>
