--- a/src/app/activites/activites.component.css
+++ b/src/app/activites/activites.component.css
@@ -1,3 +1,11 @@
+/*Background*/
 #grad7{
     background-image: linear-gradient(to right, rgba(255,0,0,0), rgba(179, 205, 218));
+}
+
+/*Header*/
+h1{
+    margin: 0px;  
+    text-align:center;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
