Professional update and header

--- a/src/app/professional/professional.component.html
+++ b/src/app/professional/professional.component.html
@@ -11,5 +11,8 @@
     <h2>Information Technology Intern</h2>
     <h3>Sun Life</h3>
     <h4>Summer 2020</h4>
-            
+    <h2>HackKU</h2>
+    <h3>University of Kansas</h3>
+    <h4>Spring 2020</h4>
+    <br>          
 </div>
